# tayra

./: .env.sample  .gitignore  CHANGELOG.md  README.md  docker-compose.yml  package.json  pyproject.toml  run.ps1  run.sh  terminate.sh
.vscode-linux/: launch.json
images/: README.md
infra/: main.bicep
infra/modules/: azureAIServices.bicep  azureAISpeech.bicep  cosmosDB.bicep  storageAccount.bicep
infra/scripts/: set-env.ps1  set-env.sh
src/classification_engine/: DOCKERFILE  README.md  __init__.py  infra.bicep  infra.webapp.bicep  run.ps1  run.sh
src/classification_engine/app/: __init__.py  background.py  classify.py  database.py  main.py
src/classification_engine/app/schemas/: __init__.py  jobs.py  responses.py
src/evaluation_engine/: DOCKERFILE  run.ps1  run.sh
src/evaluation_engine/app/: __init__.py  analysis.py  background.py  database.py  evaluate.py  main.py
src/evaluation_engine/app/prompts/: enhance.prompty  evaluate.prompty
src/evaluation_engine/app/schemas/: __init__.py  database.py  endpoints.py  models.py  prompts.py
src/frontend/: DOCKERFILE  package-lock.json  package.json  run.ps1  tsconfig.json
src/frontend/app/: page.tsx
src/frontend/app/transcriptions/: page.tsx
src/frontend/app/upload/: page.tsx
src/frontend/components/Breadcrumbs/: Breadcrumb.tsx
src/frontend/components/Cards/: Cards.tsx
src/frontend/types/: manager.ts  specialist.ts  transcription.ts
src/frontend/utils/: api.ts
src/transcription_engine/: DOCKERFILE  run.ps1  run.sh
src/transcription_engine/app/: README.md  background.py  classify.py  database.py  exceptions.py  export_cosmos_transcriptions.py  main.py  transcribe.py  transcribe_main.py
src/web_adapter/: DOCKERFILE  infra.bicep  ingest.py  main.py  run.ps1  run.sh
src/web_adapter/app/: __init__.py  background.py  ingest.py  main.py
src/web_adapter/schemas/: chat.py
src/web_api/: DOCKERFILE  __init__.py  main.py  run.ps1  run.sh
src/web_api/app/: __init__.py  main.py
src/web_api/app/schemas/: __init__.py  (+3 more)
src/web_api/schemas/: __init__.py  database.py  endpoints.py  models.py
(+13 files in other folders)
